# C_SDL_GAME_ENGINE

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: Application.c  Application.h  Assets.c  Assets.h  Globals.h  Graphics.c  Graphics.h  Input.c  Input.h  Texture.c  Texture.h  Vector2.c  Vector2.h  main.c
